# PepeluGPT

./: .dockerignore  .gitignore  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  LINT_REPORT.md  Makefile  README.md  ROADMAP.md  SECURITY.md  compliance_enhanced.txt  demo_automation_engine.py  demo_enhanced_classic.py  demo_preload.py  docker-compose.override.yml  docker-compose.yml  lint_summary.py  pyproject.toml  requirements.txt  showcase_complete_system.py  test.bat
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs.yml  documentation.yml  feature_request.yml  security.yml
.github/workflows/: ci.yml  docs.yml  lint.yml  release.yml  security.yml
archive/: README.md  deterministic.yaml.deprecated  learning_dev.yaml.deprecated
automation/: git_integration.py
cli/: __init__.py  args.py  audit.py  audit_history.py  commands.py  entry.py  plugins.py  runner.py  test_cli.py  utils.py
config/: active_config.yaml  classic.yaml  default.yaml  default_config.yaml  dev.yaml  paths.yaml  personalities.yaml  prod.yaml  profile_overrides.yaml  user_roles.yaml
core/: __init__.py  data_manager.py  engine.py  learning_engine.py  logging_config.py  orchestrator.py  pepelugpt.py  pepelugpt_engine.py  security.py  utilities.py  utils.py
data/documents/cybersecurity/: cybersecurity_acronyms.xlsx  disa_cci_list.xml  dod_apl.xls  export_controls_advanced.xlsx  export_controls_basic.xlsx  igap_export_advanced.xlsx  igap_export_basic.xlsx  reciprocity_responsibility_maxtrix_advanced_high.xlsx  reciprocity_responsibility_maxtrix_advanced_low.xlsx  reciprocity_responsibility_maxtrix_advanced_moderate.xlsx  reciprocity_responsibility_maxtrix_basic.xlsx  rmf_glossary.txt  rmf_tools_faq.docx  security_authorization_package_advanced_high.xlsx  security_authorization_package_advanced_low.xlsx  security_authorization_package_advanced_moderate.xlsx  security_authorization_package_basic.xlsx
docs/: README.md  _config.yml  architecture.md  compliance_and_security.md  design_principles.md  grafana_dashboard.json  index.md  personality_system.md
docs/ADR/: ADR-001-directory-structure-reorganization.md
docs/architecture/: README.md
docs/development/: github_workflows.md  release_process.md  testing.md
examples/: README.md
infra/: README.md
interface/: __init__.py  api.py  chat.py  cosmic_chat.py  learning_chat.py
learning/: feedback.db
monitoring/: README.md
personalities/: __init__.py  base.py  compliance.py  cosmic.py  oracle.py  professional.py  router.py
plugin-template/: README.md  plugin_template.py
plugins/: __init__.py  base.py  registry.json  registry.py
plugins/core/: ai_intelligence.py  auto_remediation.py  compliance_predictor.py  nist_800_53.py
plugins/custom/: demo_plugin.py
processing/: __init__.py  orchestrator.py  parse.py  parse_all_documents.py  router.py  schema.py  utils.py  validators.py
processing/parser/: __init__.py  docx_parser.py  html_parser.py  pdf_parser.py  pptx_parser.py  txt_parser.py  utils.py  xls_parser.py  xlsx_parser.py  xml_parser.py
processing/parsers/: docx_parser.py  html_parser.py  pdf_parser.py  pptx_parser.py  txt_parser.py  xls_parser.py  xlsx_parser.py  xml_parser.py
schemas/: config_schema.json
scripts/: benchmark_vectors.py  cleanup_legacy.py  cleanup_migration.py  consolidate_routers.py  create_banner.py  enhance_security.py  generate_release_notes.py  migrate_structure.py  migrate_vector_system.py  performance_monitor.py
security/: audit_report.md
storage/vector_db/: __init__.py  builder.py  chunking.py  config.py  database_io.py  embedding.py  indexing.py  retriever.py  vector_builder.py
tests/: .gitignore  README.md  __init__.py  conftest.py  get_nist_families.py  run_tests.py  test_core.py  test_suite.py  test_system.py
tests/demo/: __init__.py  test_demos.py
tests/integration/: __init__.py  test_system_integration.py
tests/unit/: __init__.py
tests/unit/core/: test_engine.py
tests/unit/plugins/: test_auto_remediation.py  test_compliance_predictor.py
tools/: README.md  feedback_dashboard.py  log_viewer.py  mode_suggester.py  mode_switcher.py  plugin_validator.py  prometheus_exporter.py  role_manager.py  test_mode_system.py
tools/admin/: build_vector_db.py  data_cli.py
tools/automation/: create_plugin_template.py  health_check.py  organize_project.py  setup.py
tools/automation/docker/: manage.ps1  validate-security.ps1
tools/automation/remediation/: generate_documentation.py  remove_hardcoded_secrets.py  update_dependencies.py
tools/demo/: conditional_parsing_demo.py
tools/windows/: make.ps1  pepelu.ps1  switch_mode.ps1
version/: __init__.py  manager.py  manifesto.md  mission_statement.md
