[tool.poetry]
name = "pepelugpt"
version = "0.3.1"
description = "Professional Cybersecurity Intelligence Platform"
authors = ["Pepelu <pepelu@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^6.0"
faiss-cpu = "^1.7.3"
PyMuPDF = "^1.23.0"
python-docx = "^0.8.11"
pandas = "^2.0"
python-pptx = "^0.6.21"
flask = "^2.2.3"
uvicorn = "^0.22.0"
beautifulsoup4 = "^4.12.0"
openpyxl = "^3.1.0"
xlrd = "^2.0.1"

# Optional ML dependencies for learning features
transformers = {version = "^4.21.0", optional = true}
sentence-transformers = {version = "^2.2.0", optional = true}
chromadb = {version = "^0.4.0", optional = true}
torch = {version = "^1.12.0", optional = true}
datasets = {version = "^2.5.0", optional = true}
accelerate = {version = "^0.20.0", optional = true}
numpy = {version = "^1.21.0", optional = true}
scikit-learn = {version = "^1.0.0", optional = true}
peft = {version = "^0.3.0", optional = true}
wandb = {version = "^0.15.0", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
black = "^23.9.1"
flake8 = "^6.1.0"

[tool.poetry.extras]
learning = [
    "transformers",
    "sentence-transformers", 
    "chromadb",
    "torch",
    "datasets",
    "accelerate", 
    "numpy",
    "scikit-learn",
    "peft",
    "wandb"
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88
skip = [".venv", "__pycache__"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".venv",
    "__pycache__",
    ".git", 
    "plugin-template/"
]
per-file-ignores = [
    "__init__.py:F401"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --tb=short"
testpaths = [
    "tests",
]
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests", 
    "slow: marks tests as slow running",
    "core: marks tests as core functionality",
    "plugins: marks tests as plugin functionality",
    "demo: marks tests as demo/showcase tests",
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"